# swissfile

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
.tox/pypy/: .tox-info.json
docs/: Makefile
docs/source/: conf.py  index.rst
src/swissfile/: __init__.py  __main__.py  cli.py  tagging.py
src/swissfile/cli/: __init__.py  cli.py  swissfile.py
src/swissfile/tests/: test_swissfile.py
src/tests/: test_cli.py  test_tagging.py
swissfile/: __init__.py  main.py  setup.py  swissfile.py
swissfile/swissfile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_swissfile.py
