[tool.poetry]
name = "swissfile"
version = "0.1.0"
description = ""
authors = ["James McKee <james.mckee.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"
pytest = "^7.4.3"
black = "^23.12.1"


[[tool.poetry.source]]
name = "github"
url = "https://github.com/punkcoder/swissfile"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = "swissfile:main"
